fix: fixed alignment on form section

--- a/assets/styles/layouts/LandingPPC.scss
+++ b/assets/styles/layouts/LandingPPC.scss
@@ -216,7 +216,7 @@
 			}
 
 			&-text {
-				padding: 6.5em 3.75em 0;
+				padding: 2.25em 3.75em 0;
 			}
 
 			img {
